sample-apps/backend/pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: dependant-app
   labels:
     app: dependant-app
spec:
   containers:
   - name: dependante-app
     image: dependant-app:0.1
