sample-apps/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30002
  type: NodePort
